src/sap.m/src/sap/m/themes/base/UploadCollection.less
/* ===================================================================================== */
/* CSS for control sap.m/UploadCollection.control                                        */
/*                                                                                       */
/* Base Theme                                                                            */
/* ===================================================================================== */


/* ************************************************************************************* */
/* Cozy Form Factor                                                                      */
/* ************************************************************************************* */
/* Align Upload Button in Toolbar */
.sapMUC .sapMIBar > .sapMBarChild:last-child {
	margin-right: 		0rem;
}

/* List Header */
.sapMTB.sapMUCListHeader {
	width:				100%;
	height:				3rem;
	padding-left:		1rem;
	padding-right:		1rem;
//	background-color:	fade(@sapUiLightestBG,0%);
	border-bottom-width: 0.0625rem;
	border-bottom-style: solid;
//	border-bottom-color: @sapUiMediumBorder;
	font-family:		@sapUiFontFamily;
//	font-size:			@sapMFontHeader4Size;
//	font-weight:		@sapUiFontHeaderWeight;
//	color: 				@sapUiHeaderText;
	white-space:		nowrap;
	overflow:			hidden;
	text-overflow:		ellipsis;
//	text-shadow:		0.0625rem 0rem @sapUiLightShadowTint;
	vertical-align:		middle;
}


.sapMUC .sapMLIB.sapMUCListSingleItem,
.sapMUC .sapMLIB.sapMUCListFirstItem,
.sapMUC .sapMLIB.sapMUCListLastItem,
.sapMUC .sapMLIB.sapMUCListItem {
	height: 				5rem;
	padding-top:			1rem;
	padding-bottom: 		0.9375rem;	// border-bottom: 0.0625
	border-bottom-width: 	0.0625rem;
	border-bottom-style: 	solid;
//	border-bottom-color: 	transparent; // this is the central switch for having inner separators or not
//	border-bottom-color: 	@sapUiMediumBorder;
}

.sapMLIB.sapMUCItem.sapMUCListSingleItem,
.sapMLIB.sapMUCItem.sapMUCListFirstItem,
.sapMLIB.sapMUCItem.sapMUCListLastItem,
.sapMLIB.sapMUCItem.sapMUCListItem {
	padding-left:		0.9rem;	/* 0.1rem gets the image/icon so that the left side of the keyboard frame is displayed */
}

/* Item Icon */
.sapMUCItemIcon {
	font-family:		SAP-icons;
	font-size:			2.5rem;
//	color: 				@sapUiElement;
}

.sapMImg.sapMUCItemImage{
	height:				3rem;
}

/* Text: Filename */
.sapMUC .sapMUCFileName.sapMLnk {
	margin-top:			0.125rem;
	margin-left:		0.1rem;

	font-family:		@sapUiFontFamily;
//	font-size:			@sapMFontLargeSize;
	font-weight:		normal;
	white-space:		nowrap;
	overflow:			hidden;
	text-overflow:		ellipsis;
	vertical-align:		top;
}

.sapMUC .sapMUCItem .sapMUCFileName.sapMLnk:focus {
	outline-offset:		0.0625rem;
}

/* Text: Description (/Progress) */
.sapMUCDescriptionHL .sapMLabel{
	height:				1rem;
	margin-top:			0.625rem;
	margin-bottom:		0.125rem;
	margin-left:		0.1rem;

	font-family: 		@sapUiFontFamily;
//	font-size:			@sapMFontMediumSize;
	font-weight:		normal;
//	color:				@sapUiLightText;
	vertical-align:		bottom;
}

.sapMUC .sapUiVlt {
	margin:				1rem 0rem 1rem 0rem;
	overflow:			hidden;
}

/* Button Horizontal Layout  */
.sapMUCBtnHL {
	right:				0rem;
	margin:				1rem 1rem 1rem 0rem;
	-webkit-box-flex:	none;			/* OLD - iOS 6-, Safari 3.1-6 */
	-webkit-flex:		none;		 	/* Chrome */
	-moz-flex:			none;
	-ms-flex:			none;			/* IE 10 */
	flex:				none;		 	/* NEW, Firefox 20+	*/
}

/* Buttons */
.sapMBtn.sapMUCEditBtn,
.sapMBtn.sapMUCDeleteBtn,
.sapMBtn.sapMUCCancelBtn,
.sapMBtn.sapMUCOkBtn {
	margin-left:		0.125rem;
}

.sapMUCText {
	height:				3rem;
	-webkit-box-flex:	10;			/* OLD - iOS 6-, Safari 3.1-6 */
	-webkit-flex:		10;			/* Chrome */
	-moz-flex:			10;
	-ms-flex:			10;			/* IE 10 */
	flex:	 			10 10 auto;			/* NEW, Firefox 20+	*/
}

.sapMUCItemIcon,
.sapMUCItemImage {
	height:				3rem;
	width:				3rem;
	padding-left:		0rem;
	margin-right:		0.65rem;
	margin-left:		0.1rem;
	margin-top:			1rem;
	margin-bottom:		1rem;
	-webkit-box-flex:	none;		 	/* OLD - iOS 6-, Safari 3.1-6 */
	-moz-box-flex: 		none;         	/* OLD - Firefox 19- */
	-webkit-flex:		none;			/* Chrome */
	-moz-flex:			none;
	-ms-flex:			none;			/* IE 10 */
	flex:				none;			/* NEW, Firefox 20+ */
}

.sapMUCEditHL {
	position:			absolute;
	width:				20%;
}

/* Busy Indicator */
.sapMBusyIndicator.sapMUCloadingIcon {
	padding-top:		1.25rem;
	padding-bottom:		1.25rem;
	padding-right:		1rem;
	padding-left:		0rem;
}

.sapMBusyIndicator.sapMUCloadingIcon .sapMBusySvg {
	height:				2.5rem;
	width:				2.5rem;
}

/* In iOS/mac the line content is shown at the bottom of the line.
the following lines remove the responsible top margin/padding  */
html[data-sap-ui-os^="mac"][data-sap-ui-browser^="sf"],
html[data-sap-ui-os^="iOS"] {
	.sapMUCItemIcon,
	.sapMUCItemImage {
		margin-top:		0rem;
	}

	.sapMUCBtnHL {
		margin-top:		0rem;
	}

	.sapMBusyIndicator.sapMUCloadingIcon {
		padding-top:	0rem;
	}

	.sapMUC .sapUiVlt {
		margin-top:		0rem;
	}
}
/* ... */

