[FIX] sap.m.UploadCollection: The focus on filename is now visible.

--- a/src/sap.m/src/sap/m/themes/base/UploadCollection.less
+++ b/src/sap.m/src/sap/m/themes/base/UploadCollection.less
@@ -81,6 +81,7 @@
 }
 
 .sapMUC .sapMUCItem .sapMUCFileName.sapMLnk:focus {
+	outline:			1px dotted;
 	outline-offset:		0.0625rem;
 }
 
